# ZKEye

./: README.md
backend/host/: Cargo.toml
backend/host/src/: main.rs
backend/methods/guest/src/: main.rs
frontend/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/ui/: Footer.tsx  Header.tsx  global.css
