[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
chrono = "0.4"

